# email-csv-extractor

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  example_usage.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: setup-autostart.sh  start.sh  stop.sh
src/email_csv_extractor/: __init__.py  cli.py
src/email_csv_extractor/auth/: __init__.py  ms_graph_auth.py
src/email_csv_extractor/config/: settings.py
src/email_csv_extractor/core/: __init__.py  container.py  duplicate_detector.py  exceptions.py  interfaces.py
src/email_csv_extractor/download/: __init__.py  csv_downloader.py
src/email_csv_extractor/email/: __init__.py  ms_graph_poller.py
src/email_csv_extractor/filtering/: __init__.py  message_filter.py
src/email_csv_extractor/upload/: __init__.py  sharepoint_uploader.py
src/email_csv_extractor/workflow/: __init__.py  processor.py
tests/: conftest.py
tests/unit/auth/: test_ms_graph_auth.py
tests/unit/config/: test_settings.py
tests/unit/core/: test_container.py  test_duplicate_detector.py
tests/unit/filtering/: test_message_filter.py
